k8s/romm/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm-svc
  labels:
    app: romm
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: romm
