k8s/romm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm-ingress
  namespace: romm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: emu.cjcocokrisp.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: romm-svc
            port:
              number: 8080
